--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<div class="container">
-<h1>QUOTES</h1>
-<ul>
-  <li *ngFor='let quote of quotes'>{{quote.name}}</li>
-</ul>
-</div>
+<app-quote></app-quote>
