--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,6 +1,9 @@
 <div class="container">
 <h1>QUOTES</h1>
 <ul>
-  <li *ngFor='let quote of quotes'>{{quote.name}}</li>
+  <div *ngFor='let quote of quotes'>
+  <li>{{quote.name}}</li>
+  <app-quote-details [quote]='quote'></app-quote-details>
+</div>
 </ul>
 </div>
