Create Button to display more information

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,9 +1,10 @@
+<div class="jumbotron"><h1>QUOTES</h1></div>
 <div class="container">
-<h1>QUOTES</h1>
 <ul>
-  <div *ngFor='let quote of quotes'>
-  <li>{{quote.name}}</li>
-  <app-quote-details [quote]='quote'></app-quote-details>
+  <div *ngFor='let quote of quotes;let i=index'>
+    <li>{{quote.name}}</li>
+    <button (click)='toogleDetails(i)' class="btn info">More Info</button>
+    <app-quote-details *ngIf="quote.showAuthor" [quote]='quote'></app-quote-details>
 </div>
 </ul>
 </div>
