--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,4 +1,10 @@
 .container{
   margin: 10%;
   margin-right: 20%;
+  font-size: 150%;
+}
+.info{
+  background-color: #2196F3;
+  padding: 2%;
+  font-size: 110%;
 }
