--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,3 +1,3 @@
 <p>{{quote.author}}</p>
 <p>{{quote.date}}</p>
-<button (click) = 'quoteComplete(true)'> Complete </button>
+<button (click) = 'quoteComplete(true)'> Delete </button>
