--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -2,9 +2,10 @@
 <div class="container">
 <ul>
   <div *ngFor='let quote of quotes;let i=index'>
-    <li>{{quote.name}}</li>
+    <li id="{{i}}" appUnderline>{{quote.name}}</li>
     <button (click)='toogleDetails(i)' class="btn info">More Info</button>
-    <app-quote-details *ngIf="quote.showAuthor" [quote]='quote' (isComplete)='quoteComplete($event,i)'></app-quote-details>
+    <app-quote-details *ngIf="quote.showAuthor" [quote]='quote'
+    (isComplete)='deleteQuote($event,i)'></app-quote-details>
 </div>
 </ul>
 </div>
