--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,3 +1,3 @@
-<p>{{quote.author}}</p>
-<p>{{quote.date}}</p>
+<p>This quote was written by {{quote.author}}</p>
+<app-vote></app-vote>
 <button (click) = 'quoteComplete(true)'> Delete </button>
