Set up icons for upvote and downvote

--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -1,3 +1,11 @@
 <p>
-  vote works!
-</p>
+  <span style="font-size: 1.2em; color: hotpink;" (click)="upVote()">
+    <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+  </span> {{uvotes}} &ensp;
+  <span style="color: dodgerblue; font-size: 1.2em;" (click)="downVote()">
+    <i class="fa fa-thumbs-down" aria-hidden="true"></i>
+  </span>
+  {{dvotes}} &ensp;
+
+  </p>
+  
