--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -1,11 +1,10 @@
 <p>
-  <span style="font-size: 1.2em; color: hotpink;" (click)="upVote()">
+  <span style="font-size: 1.2em; color: blue;" (click)="upVote()">
     <i class="fa fa-thumbs-up" aria-hidden="true"></i>
   </span> {{uvotes}} &ensp;
-  <span style="color: dodgerblue; font-size: 1.2em;" (click)="downVote()">
+  <span style="color: red; font-size: 1.2em;" (click)="downVote()">
     <i class="fa fa-thumbs-down" aria-hidden="true"></i>
   </span>
   {{dvotes}} &ensp;
 
   </p>
-  
