add submit button

--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -14,4 +14,7 @@
         <div [hidden]="quote.valid || quote.pristine" class="alert alert-danger">
           <p>Quote is required</p>
         </div>
+
+  <!--Submit Button-->
+  <button type="submit" class="btn btn-success btn-lg">Add Quote</button>
 </form>
