--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,10 +1,10 @@
 <div class="jumbotron"><h1>QUOTES</h1></div>
 <div class="container">
 <div class="row">
-<div class="col-md-6">
+<div class="col-md-6 form">
 <app-quote-form (addQuote)="addNewQuote($event)"></app-quote-form>
 </div>
-<div class="col-md-6">
+<div class="col-md-6 quote">
 <ul>
   <div *ngFor='let quote of quotes;let i=index'>
     <li id="{{i}}" appUnderline>{{quote.name}}</li>
